--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,6 +1,6 @@
 # Prefix
 set-option -g prefix C-t
-unbind-key C-b
+#unbind-key C-b
 bind-key C-t send-prefix
 
 ## disable ESC delay
@@ -37,10 +37,16 @@ set-window-option -g automatic-rename off
 set-window-option -g mode-mouse on
 set-window-option -g mouse-resize-pane on
 set-window-option -g mouse-select-pane on
-set-option -g base-index 1
+set-window-option -g base-index 1
 
 # KeyBindings
-unbind ^C
+#unbind ^C
+
+setw -g mode-keys vi
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 #bind r source-file ~/.tmux.conf; display-message "Reload Config!!"
 
@@ -55,3 +61,5 @@ bind y copy-mode
 bind P paste-buffer
 
 set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+set-option -g default-terminal "xterm"
+set -g terminal-overrides 'xterm:colors=256'
