--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,3 +1,11 @@
 [user]
 	name = Yuta Inoue
 	email = y.wizowoz@gmail.com
+[filter "media"]
+	clean = git media clean %f
+	smudge = git media smudge %f
+	required = true
+[filter "hawser"]
+	clean = git hawser clean %f
+	smudge = git hawser smudge %f
+	required = true
